--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
        <% if can? :read , Role.new %> 
         <%=link_to "roles" ,roles_path %> 
        <% end %>
+       <% if can? :read ,Room.new %>
+        <%= link_to "rooms",rooms_path %>
+      <% end %>
         <%= link_to "cities" , cities_path %> | <%= link_to "amenities" , amenities_path %><br>
     	Welcome <%= current_user.username %>
        <%= link_to "Account Setting" , edit_user_registration_path %> | <%= link_to "Logout" , destroy_user_session_path, method: :delete %>
