--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Users</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Username</th>
@@ -23,7 +23,7 @@
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= user.number %></td>
-        <td><%= user.role_id %></td>
+        <td><%= user.role.name %></td>
         <td><%= user.email %></td>
         <td><%= user.password %></td>
         <td><%= link_to 'Show', user %></td>
