--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,47 +1,100 @@
 <p id="notice"><%= notice %></p>
+<h1>Listing Authorized Rooms</h1>
 
-<h1>Listing Rooms</h1>
-
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Rules</th>
-      <th>Minimum_days</th>
-      <th>City</th>
-      <th>Address</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th>user id</th>
-      <th>Authorized</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @rooms.each do |room| %>
+  <table class="table table-bordered">
+    <thead>
       <tr>
-        <td><%= room.name %></td>
-        <td><%= room.description  %></td>
-        <td><%= room.price %></td>
-        <td><%= room.rules %></td>
-        <td><%= room.minimum_days%></td>
-        <td><%= room.city_id%></td>
-        <td><%= room.address %></td>
-        <td><%= room.latitude %></td>
-        <td><%= room.longitude %></td>
-        <td><%= room.user_id %></td>
-        <td><%= room.is_authorized %></td>
-        <td><%= link_to 'Show', room %></td>
-        <td><%= link_to 'Edit', edit_room_path(room) %></td>
-        <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Price</th>
+        <th>Rules</th>
+        <th>Minimum_days</th>
+        <th>City</th>
+        <th>Address</th>
+        <th>Latitude</th>
+        <th>Longitude</th>
+        <th>username</th>
+        <th>Authorized</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @room_authorized.each do |room| %>
+        <tr>
+          <td><%= link_to room.name, room %></td>
+          <td><%= room.description  %></td>
+          <td><%= room.price %></td>
+          <td><%= room.rules %></td>
+          <td><%= room.minimum_days%></td>
+          <td><%= room.city_id%></td>
+          <td><%= room.address %></td>
+          <td><%= room.latitude %></td>
+          <td><%= room.longitude %></td>
+          <td><%= room.user.username%></td>
+          <td><%= room.is_authorized %></td>
+          <td><%= form_for(room) do |f| %>
+              <% if current_user.role? "admin" %>
+                <%= f.label :authorized %><br>
+                <%= f.check_box :is_authorized %>
+              <% end %></td>
+              <td><%= f.submit "submit" %></td>
+              <td><%= link_to 'Edit', edit_room_path(room) %></td>
+              <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <%= link_to 'New room', new_room_path %>
 
-<%= link_to 'New room', new_room_path %>
+<% if current_user.role? "admin"  %>
+  <h1>Listing Unauthorized Room</h1>
+
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Price</th>
+        <th>Rules</th>
+        <th>Minimum_days</th>
+        <th>City</th>
+        <th>Address</th>
+        <th>Latitude</th>
+        <th>Longitude</th>
+        <th>username</th>
+        <th>Authorized</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @room_unauthorized.each do |room| %>
+        <tr>
+          <td><%=link_to room.name,room %></td>
+          <td><%= room.description  %></td>
+          <td><%= room.price %></td>
+          <td><%= room.rules %></td>
+          <td><%= room.minimum_days%></td>
+          <td><%= room.city_id%></td>
+          <td><%= room.address %></td>
+          <td><%= room.latitude %></td>
+          <td><%= room.longitude %></td>
+          <td><%= room.user.username%></td>
+          <td><%= room.is_authorized %></td>
+            <td><%= form_for(room) do |f| %>
+              <% if current_user.role? "admin" %>
+                <%= f.label :authorized %><br>
+                <%= f.check_box :is_authorized %>
+              <% end %></td>
+              <td><%= f.submit "submit" %></td>
+          <td><%= link_to 'Edit', edit_room_path(room) %></td>
+          <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <br>
+<% end %>
