--- a/app/views/rooms/my_rooms.html.erb
+++ b/app/views/rooms/my_rooms.html.erb
@@ -19,7 +19,7 @@
     </thead>
 
     <tbody>
-      <% @my_rooms.each do |room| %>
+      <% @my_room.each do |room| %>
         <tr>
           <td><%= link_to room.name, room %></td>
           <td><%= room.description  %></td>
