--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Roles</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -13,15 +13,19 @@
   <tbody>
     <% @roles.each do |role| %>
       <tr>
-        <td><%= role.name %></td>
-        <td><%= link_to 'Show', role %></td>
-        <td><%= link_to 'Edit', edit_role_path(role) %></td>
-        <td><%= link_to 'Destroy', role, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=link_to role.name,role %></td>
+        <% if can? :read, Role.new %>
+          <td><%= link_to 'Edit', edit_role_path(role) %></td>
+        <% end %>
+        <% if can? :destroy, Role.new %>
+          <td><%= link_to 'Destroy', role, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>  
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Role', new_role_path %>
+<% if can? :create, Role.new %>
+  <%= link_to 'New Role', new_role_path %>
+<% end %>
