--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -44,6 +44,7 @@
   <strong>is_authorized:</strong>
   <%= @room.is_authorized %>
 </p>
-
-<%= link_to 'Edit', edit_room_path(@room) %> |
+<% if can? :update, Room.new %>
+  <%= link_to 'Edit', edit_room_path(@room) %> |
+<% end %>
 <%= link_to 'Back', rooms_path %>
