added maps in rooms show page

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -60,7 +60,9 @@
       </tbody>
     </table>
 <% end %>
+<% if can? :create ,Room.new %>
   <%= link_to 'New room', new_room_path %>
+<% end %>
 
 <% if can? :update ,Room.new  %>
   <h1>Listing Unauthorized Room</h1>
