added bookings and jquery datesfor bookings

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -55,6 +55,10 @@
         <strong>is_authorized:</strong>
         <%= @room.is_authorized %>
       </p>
+      <div>
+        <h3>Book Room</h3>
+        <%= render './bookings/form' %>
+      </div>
       <% if can? :update, Room.new %>
         <%= link_to 'Edit', edit_room_path(@room) %> |
       <% end %>
@@ -66,3 +70,36 @@
     </div>
   </div>
 </div>
+<script>
+  $( function() {
+    var dateFormat = "mm/dd/yy",
+      from = $( "#from" )
+        .datepicker({
+          defaultDate: "+1w",
+          changeMonth: true,
+          numberOfMonths: 3
+        })
+        .on( "change", function() {
+          to.datepicker( "option", "minDate", getDate( this ) );
+        }),
+      to = $( "#to" ).datepicker({
+        defaultDate: "+1w",
+        changeMonth: true,
+        numberOfMonths: 3
+      })
+      .on( "change", function() {
+        from.datepicker( "option", "maxDate", getDate( this ) );
+      });
+ 
+    function getDate( element ) {
+      var date;
+      try {
+        date = $.datepicker.parseDate( dateFormat, element.value );
+      } catch( error ) {
+        date = null;
+      }
+ 
+      return date;
+    }
+  } );
+  </script>
