--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -79,7 +79,7 @@
   </div>
 <% end %>
 
-<script>
+<!-- <script>
   var addressHandle =  document.getElementById('room_address');
   var addressErrorHandle = document.getElementById('addressError');
   var latitudeHandle = document.getElementById('room_latitude');
@@ -115,4 +115,4 @@
            xhr.send();
     }
   };
-</script>
+</script> -->
