--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -12,52 +12,23 @@
   <% end %>
   <div class="field">
     <%= f.label :start_date%><br>
-    <%= f.text_field :start_date,id: "from" %>
+    <%= f.date_field :start_date,id: "from" %>
+    
   </div>
   <div class="field">
     <%= f.label :end_date %><br>
-    <%= f.text_field :end_date ,id: "to" %>
+    <%= f.date_field :end_date ,id: "to" %>
   </div>
   <div class="field">
     <%= f.label :confirm %>
-    <%= f.check_box :is_confirmed %>
+    <%= f.check_box :is_confirmed ,id: "confirm"%>
+    <span id="startError"></span>
   </div>
+  <%#=f.hidden_field :room_id ,  %>
   <div>
   </div>
   <div class="actions">
     <%= f.submit "submit", id: "submit", class: "btn btn-info"%>
   </div>
-<% end -%>
-<script>
-  $( function() {
-    var dateFormat = "mm/dd/yy",
-      from = $( "#from" )
-        .datepicker({
-          defaultDate: "+1w",
-          changeMonth: true,
-          numberOfMonths: 2
-        })
-        .on( "change", function() {
-          to.datepicker( "option", "minDate", getDate( this ) );
-        }),
-      to = $( "#to" ).datepicker({
-        defaultDate: "+1w",
-        changeMonth: true,
-        numberOfMonths: 2
-      })
-      .on( "change", function() {
-        from.datepicker( "option", "maxDate", getDate( this ) );
-      });
- 
-    function getDate( element ) {
-      var date;
-      try {
-        date = $.datepicker.parseDate( dateFormat, element.value );
-      } catch( error ) {
-        date = null;
-      }
- 
-      return date;
-    }
-  } );
-  </script>
+<% end %>
+
