--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -57,7 +57,41 @@
       </p>
       <div>
         <h3>Book Room</h3>
-        <%= render './bookings/form' %>
+        <%#= render './bookings/form' %>
+        <%= form_for(@booking) do |f| %>
+          <% if @booking.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@booking.errors.count, "error") %> prohibited this booking from being saved:</h2>
+
+              <ul>
+              <% @booking.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+              </ul>
+            </div>
+          <% end %>
+          <div class="field">
+            <%= f.label :start_date%><br>
+            <%= f.date_field :start_date,id: "from" %>
+            
+          </div>
+          <div class="field">
+            <%= f.label :end_date %><br>
+            <%= f.date_field :end_date ,id: "to" %>
+          </div>
+          <div class="field">
+            <%= f.label :amount %><br>
+            <%= f.number_field :amount %>
+          </div>
+          <div class="field">
+            <%= f.label :confirm %>
+            <%= f.check_box :is_confirmed %>
+          </div>
+          <%=f.hidden_field :room_id , value: @room.id %>
+          <div class="actions">
+            <%= f.submit "submit", id: "submit", class: "btn btn-info"%>
+          </div>
+        <% end %>
       </div>
       <% if can? :update, Room.new %>
         <%= link_to 'Edit', edit_room_path(@room) %> |
@@ -70,22 +104,26 @@
     </div>
   </div>
 </div>
-<script>
+<!-- <script>
   $( function() {
     var dateFormat = "mm/dd/yy",
       from = $( "#from" )
         .datepicker({
+          minDate: 0,
+          dateFormat: 'yy-mm-dd',
           defaultDate: "+1w",
           changeMonth: true,
-          numberOfMonths: 3
+          numberOfMonths: 2
         })
         .on( "change", function() {
           to.datepicker( "option", "minDate", getDate( this ) );
         }),
       to = $( "#to" ).datepicker({
+        minDate: 0,
+        dateFormat: 'yy-mm-dd',
         defaultDate: "+1w",
         changeMonth: true,
-        numberOfMonths: 3
+        numberOfMonths: 2
       })
       .on( "change", function() {
         from.datepicker( "option", "maxDate", getDate( this ) );
@@ -102,4 +140,5 @@
       return date;
     }
   } );
-  </script>
+  
+  </script> -->
