--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -45,9 +45,9 @@
 
       <p>
         <strong>Image:</strong>
-        <% @room.images.each do |r| %>
-          <%= image_tag r.image %>
-        <% end %>
+        <%# @room.images.each do |r| %>
+          <%#= image_tag r.image %>
+        <%# end %>
         <%#= image_tag @room.images.image %>
       </p>
 
