added active storage ,updated to rails 5.2 ,theme integrated

--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -63,9 +63,10 @@
   </div><br>
 
   <div>
-    <%= f.fields_for :images, @image do |ff| %>
-      <%= ff.file_field :image %>
-    <% end %>
+    <%= f.label :images %>
+      <%= f.file_field :images,multiple: true %>
+    <%#= f.fields_for :images, @image do |ff| %>
+    <%# end %>
   </div>
   <%# only for admin %>
   <div class="field">
