--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,42 +4,107 @@
   <title>Rent2guest</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="http://harvesthq.github.io/chosen/chosen.css" />
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">
-    <% if user_signed_in? %>
-      <% if can? :read , User.new %> 
-        <%=link_to "users" , users_path %>
-      <% end %>
-       <% if can? :read , Role.new %> 
-        <%=link_to "roles" ,roles_path %> 
-       <% end %>
-       <% if can? :read ,Room.new %>
-        <%= link_to "rooms",rooms_path %>
-      <% end %>
-      <% if can? :read, City.new %>
-        <%= link_to "cities" , cities_path %> 
-      <% end %>| 
-      <% if can? :read, Amenity.new %>
-        <%= link_to "amenities" , amenities_path %><br>
-      <% end %>
-    	Welcome <%= current_user.username %>
-       <%= link_to "Account Setting" , edit_user_registration_path %> | <%= link_to "Logout" , destroy_user_session_path, method: :delete %>
-    <% else %>
-    	<%= link_to "Login" , new_user_session_path %> | <%= link_to "Register" , new_user_registration_path %>
-      <br>
-    <% end %>
+<div id="page">
+  <div class="top-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+  <!--  -->
+            </div>
+            <div class="col-md-6">
+                <div class="social-grid">
+                    <ul class="list-unstyled text-right">
+                        <li><a><i class="fa fa-facebook"></i></a></li>
+                        <li><a><i class="fa fa-twitter"></i></a></li>
+                        <li><a><i class="fa fa-linkedin"></i></a></li>
+                        <li><a><i class="fa fa-instagram"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+  <header class="header-container">
+    <div class="container">
+        <div class="top-row">
+            <div class="row">
+                <div class="col-md-2 col-sm-6 col-xs-6">
+                    <div id="logo">
+                        <!--<a href="index.html"><img src="images/logo.png" alt="logo"></a>-->
+                        <a href="index.html"><span>vacay</span>home</a>
+                    </div>                       
+                </div>
+                <div class="col-sm-6 visible-sm">
+                    <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
+                </div>
+                <div class="col-md-8 col-sm-12 col-xs-12 remove-padd">
+                    <nav class="navbar navbar-default">
+                        <div class="navbar-header page-scroll">
+                            <button data-target=".navbar-ex1-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+
+                        </div>
+                        <div class="collapse navigation navbar-collapse navbar-ex1-collapse remove-space">
+                            <ul class="list-unstyled nav1 cl-effect-10">
+                                <li><a  data-hover="Home" class="active"><span>Home</span></a></li>
+                                <li><a data-hover="About"  href="about.html"><span>About</span></a></li>
+                                <li><a data-hover="Rooms"  href="rooms.html"><span>Rooms</span></a></li>
+                                <li><a data-hover="Gallery"  href="gallery.html"><span>Gallery</span></a></li>
+                                <li><a data-hover="Dinning" href="dinning.html"><span>Dinning</span></a></li>
+                                <li><a data-hover="News" href="news.html"><span>News</span></a></li>
+                                <li><a data-hover="Contact Us" href="contact.html"><span>contact Us</span></a></li>
+                            </ul>
+
+                        </div>
+                    </nav>
+                </div>
+                <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
+                    <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </header>
+    <div id="myCarousel1" class="carousel slide" data-ride="carousel"> 
+      <!-- Indicators -->
+
+      <ol class="carousel-indicators">
+          <li data-target="#myCarousel1" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel1" data-slide-to="1"></li>
+          <li data-target="#myCarousel1" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+          <div class="item active"> <%= image_tag "banner.png", style: "width:100%; height: 500px" ,alt: "First slide"%>
+              <div class="carousel-caption">
+                  <h1>vacayhome<br> spa & Resort</h1>
+              </div>
+          </div>
+          <div class="item"> <%= image_tag "banner2.png" ,style:"width:100%; height: 500px" ,alt:"Second slide"%>
+              <div class="carousel-caption">
+                  <h1>vacayhome<br> spa & Resort</h1>
+              </div>
+          </div>
+          <div class="item"> <%= image_tag "banner3.png" ,style:"width:100%; height: 500px" ,alt:"Third slide" %>
+              <div class="carousel-caption">
+                  <h1>vacayhome<br> spa & Resort</h1>
+              </div>
+          </div>
+
+      </div>
+      <a class="left carousel-control" href="#myCarousel1" data-slide="prev"> <%= image_tag "left-arrow.png",onmouseover: "this.src: 'left-arrow-hover.png'", onmouseout:"this.src: 'images/icons/left-arrow.png'", alt:"left" %></a>
+      <a class="right carousel-control" href="#myCarousel1" data-slide="next"> <%= image_tag "right-arrow.png", onmouseover: "this.src: 'right-arrow-hover.png'", onmouseout: "this.src: 'right-arrow.png'" ,alt: "left"%></a>
+
+  </div>
+</div>
       <%= yield %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
-</div>
 </body>
 </html>
